fixtures/frontend/milestone-2/invalid/custom-source-provider-unsupported-schema-type/main.aivi
provider custom.feed
    option handler: Text -> Text
    wakeup: providerTrigger

@source custom.feed
sig updates : Signal Int
